--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <header>
         <nav>
-            <h2><a class="logo" href="/"> Pedro Andrade ™ 🛸</a></h2>
+            <h2><a class="logo" href="https://pedroandradeoriginal.github.io/Portfolio-novo/"> Pedro Andrade ™ 🛸</a></h2>
 
             <ul id="nav-list" class="nav-list">
                 <li class="item-list"><a class="nav-link" href="#about">Quem sou</a></li>
