--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" type="image/png" href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="imagens/colorido.jpg" type="image/x-icon">
     <title>Pedro Andrade</title>
 </head>
 
