Ajuste na chamada do whatsapp

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <a class="whatsapp-link" href="https://web.whatsapp.com/send?phone=5521983578774" target="_blank">
+    <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
         <i class="fa fa-whatsapp"></i>
     </a>
 
