--- a/index.html
+++ b/index.html
@@ -15,28 +15,25 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" type="image/png" href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="imagens/colorido.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/Software Engineer.png" type="image/x-icon">
     <title>Pedro Andrade</title>
 </head>
 
 
 <body>
-
     <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
-        <i class="fa fa-whatsapp"></i>
+        <img src="imagens/icon-whats.svg" alt="" srcset="">
     </a>
-
     <header>
         <nav>
-            <h2><a class="logo" href="https://pedroandradeoriginal.github.io/Portfolio-novo/"> Pedro Andrade ™ 🛸</a></h2>
-
+            <h2><a class="logo" href="https://pedroandradeoriginal.github.io/Portfolio-novo/"> Pedro Andrade ™ 🛸</a>
+            </h2>
             <ul id="nav-list" class="nav-list">
                 <li class="item-list"><a class="nav-link" href="#about">Quem sou</a></li>
                 <li class="item-list"><a class="nav-link" href="#projects">Projetos</a></li>
-                <li class="item-list"><a class="nav-link" href="#skills">Conhecimentos</a></li>
+                <li class="item-list"><a class="nav-link" href="#Conhecimentos">Conhecimentos</a></li>
                 <li class="item-list"><a class="nav-link" href="#contacts">Contato</a></li>
             </ul>
-
             <div class="menu-icon">
                 <div id="line-one" class="line-1"></div>
                 <div id="line-two" class="line-2"></div>
@@ -46,30 +43,24 @@
     </header>
 
     <main>
-
         <section id="home" class="s-home">
-
             <article class="article-home">
-                <spam class="spam-home  d-200">Olá, meu nome é</spam>
+                <spam class="spam-home  d-200">Olá, mundo! Meu nome é</spam>
                 <h1 class="d-300">
                     <spam>Pedro Andrade</spam>
                 </h1>
-                <p id="typeWriter" class="d-300">Sou desenvolvedor web.</p>
+                <p id="typeWriter" class="d-300">Sou Programador.</p>
                 <div class="buttons-home d-400">
                     <a class="get-in-touch" href="#contacts">Entrar em contato</a>
                 </div>
             </article>
-
             <img class="img-home" src="imagens/Software Engineer.png" alt="Minha foto falhou rsrs">
-
         </section>
-
         <section id="about" class="s-about">
-
             <article class="article-about">
                 <h2 class="title-about d-200">Quem sou <spam class="point">.</spam>
                 </h2>
-                <p class="paragraph-about d-300">
+                <p class="paragraph-about">
                     Pedro Paulo Monteiro Freitas de Andrade – 32 anos, Casado - Residente de Itaboraí - RJ <br><br>
                     Estou cursando Engenharia de Software (Conclusão em 2024) e buscando a transição profissional para a
                     área de desenvolvimento web, me considero um trabalhador determinado e eficiente, possuo senso de
@@ -80,51 +71,41 @@
                     😉🤝
                 </p>
             </article>
-
         </section>
-
         <section id="projects" class="s-projects">
-
             <h2 class="title-projects d-200">Projetos <spam class="point">.</spam>
             </h2>
-
             <div class="container-projects d-300">
                 <div class="row-1">
-
                     <div class="cards-project">
-                        <img src="imagens/portfolio.PNG" alt="">
-
+                        <img src="imagens/aleatoriando.png" alt="">
                         <div class="project-info">
-                            <h4>Portfólio</h4>
-                            <p>Meu primeiro site portfólio, feito em HTML, CSS e JavaScript puro</p>
+                            <h4>Aleatoriando</h4>
+                            <p>Sistema gerador de números aleatórios dentro de um range</p>
                             <div class="btns-project">
-                                <a class="view-live" href="https://pedroandradeoriginal.github.io/Portfolio/"
+                                <a class="view-live" href="https://pedroandradeoriginal.github.io/aleatoriando/"
                                     target="_blank">View Live</a>
-                                <a class="github-repo" href="https://github.com/PedroAndradeOriginal/Portfolio"
+                                <a class="github-repo" href="https://github.com/PedroAndradeOriginal/aleatoriando"
                                     target="_blank">GitHub Repo</a>
                             </div>
                         </div>
                     </div>
-
-                    <div class="cards-project d-300">
-                        <img src="imagens/dadev.PNG" alt="">
-
+                    <div class="cards-project">
+                        <img src="imagens/contador.png" alt="">
                         <div class="project-info">
-                            <h4>Dadev Sorteios</h4>
-                            <p> Gera números aleatórios dentro de um range
+                            <h4>Contador</h4>
+                            <p> Acrescenta ou diminui números a partir de botões com códigos Javascript
                             </p>
                             <div class="btns-project">
-                                <a class="view-live" href="https://dadevsorteios.app.br/" target="_blank">View Live</a>
-                                <a class="github-repo" href="https://github.com/PedroAndradeOriginal/dadevSorteios"
+                                <a class="view-live" href="https://pedroandradeoriginal.github.io/Contador/"
+                                    target="_blank">View Live</a>
+                                <a class="github-repo" href="https://github.com/PedroAndradeOriginal/Contador"
                                     target="_blank">GitHub Repo</a>
                             </div>
                         </div>
-
                     </div>
-
                     <div class="cards-project">
                         <img src="imagens/rj loc.PNG" alt="">
-
                         <div class="project-info">
                             <h4>R-J Locações</h4>
                             <p>Landing page para uma empresa de movimentação de cargas.
@@ -136,69 +117,89 @@
                                     target="_blank">GitHub Repo</a>
                             </div>
                         </div>
-
                     </div>
-
-
+                    <div class="cards-project">
+                        <img src="imagens/dsmeta.png" alt="">
+                        <div class="project-info">
+                            <h4>DS-Meta</h4>
+                            <p> Programa de relatório de vendas que manda SMS para número informado
+                            </p>
+                            <div class="btns-project">
+                                <a class="view-live" href="https://vendasporperiododsmeta.netlify.app/"
+                                    target="_blank">View Live</a>
+                                <a class="github-repo" href="https://github.com/PedroAndradeOriginal/dsmeta"
+                                    target="_blank">GitHub Repo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cards-project">
+                        <img src="imagens/stemphylium.png" alt="">
+                        <div class="project-info">
+                            <h4>Stemphylium</h4>
+                            <p> Site institucional de uma banda que vai te fazer feliz
+                            </p>
+                            <div class="btns-project">
+                                <a class="view-live" href="https://pedroandradeoriginal.github.io/stemphylium/"
+                                    target="_blank">View Live</a>
+                                <a class="github-repo" href="https://github.com/PedroAndradeOriginal/stemphylium"
+                                    target="_blank">GitHub Repo</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cards-project">
+                        <img src="imagens/Kebra.png" alt="">
+                        <div class="project-info">
+                            <h4>Kebra Store</h4>
+                            <p> Catálogo de produtos feito em Html Css e Javascript
+                            </p>
+                            <div class="btns-project">
+                                <h4>EM BREVE</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-
         </section>
-
-        <section id="skills" class="s-skills">
-
-            <article class="article-skills">
-                <h2 class="title-skills d-200">Conhecimentos <spam class="point">.</spam>
+        <section id="Conhecimentos" class="s-about">
+            <article class="article-about">
+                <h2 class="title-about d-200">Conhecimentos <spam class="point">.</spam>
                 </h2>
-                <spam class="card-name"></spam>
-                <p id="info-skills" class="d-300">Passe o cursor *ou clique no mobile* sobre os ícones para saber mais
+                <p class="paragraph-about">
+                    Sou um profissional consolidado em outra área, e agora estou buscando a transição para a área de
+                    Desenvolvimento web ou similares. Sou muito determinado, eficiente, possuo senso de urgência, sou
+                    ágil e organizado. <br><br>
+
+                    Tenho conhecimentos de aproximadamente 2 anos em:<br><br>
+
+                    ADVPL + Arquitetura TOTVs Protheus;<br>
+                    Javascript Vanilla, React-Js, Typescript;<br>
+                    HTML 5, CSS 3, Bootstrap;<br>
+                    Node.Js, Java, Spring, API Rest;<br>
+                    SQL;<br>
+                    Github e Git;<br>
+                    Metodologias ágeis (Kanban);<br>
+                    Figma + Canva + Wordpress + Wix<br><br>
+                    Algumas experiências com programação e desenvolvimento web:<br><br>
+
+                    ALEATORIANDO - DESENVOLVEDOR / IDEALIZADOR Idealizador e desenvolvedor do projeto "Aleatoriando"
+                    atuando nas áreas operacionais e administrativas.<br><br>
+
+                    CLUBE DO JUNINHO - DESENVOLVEDOR / IDEALIZADOR Idealizador e desenvolvedor do projeto Clube do
+                    Juninho, atuando nas áreas operacionais e administrativas.
+                    <br><br>
+                    FREELANCER - DESENVOLVEDOR WEB Criação de landing pages, sites estáticos e lojas virtuais com as
+                    tecnologias mais utilizadas da atualidade.<br><br>
+
+
+                </p>
             </article>
-
-            <div class="grid-skills d-400">
-
-                <div class="card-skills js">
-                    <img src="imagens/1.png" width="15vh" />
-                    <!-- <spam>JavaScript</spam> -->
-                </div>
-
-                <div class="card-skills html">
-                    <img src="imagens/3.png" alt="HTML" width="15vh">
-                    <!-- <spam>HTML</spam> -->
-                </div>
-
-                <div class="card-skills css">
-                    <img src="imagens/4.png" alt="CSS" width="15vh">
-                    <!-- <spam>CSS</spam> -->
-                </div>
-
-                <div class="card-skills git">
-                    <img src="imagens/14.png" alt="GitSvg" width="50vh">
-                    <!-- <spam>Git</spam> -->
-                </div>
-
-                <div class="card-skills responsive">
-                    <img src="imagens/5.png" alt="ResponsivoPng" width="15vh">
-                    <!-- <spam>Responsividade</spam> -->
-                </div>
-
-                <div class="card-skills accessibility">
-                    <img src="imagens/15.png" alt="AcessibilidadePng" width="15vh">
-                    <!-- <spam>Acessibilidade</spam> -->
-                </div>
-            </div>
-
         </section>
-
         <section id="contacts" class="s-contact">
-
             <article class="article-contact">
-
                 <h2 class="title-contact d-200">
                     Contato <spam class="point">.</spam>
                     <p>21 98357-8774</p>
                 </h2>
-
                 <div class="social-links d-400">
-
                     <div class="redessociais">
                         <a href="https://www.instagram.com/pedro_andrade_se/" target="_blank"><img
                                 src="https://img.shields.io/badge/-Instagram-%23E4405F?style=for-the-badge&logo=instagram&logoColor=white"
@@ -208,39 +209,28 @@
                                 target="_blank"></a>
                     </div>
                 </div>
-
             </article>
 
             <form action="https://formsubmit.co/pedrofreitasdeandrade@gmail.com" method="POST" class="form d-400">
                 <label>
                     <input type="text" name="Nome" placeholder="Seu nome" required autocomplete>
                 </label>
-
                 <label>
                     <input type="email" name="Email" placeholder="seuemail@email.com" required autocomplete="">
                 </label>
-
                 <label>
                     <textarea name="Mensagem" placeholder="Deixe sua mensagem"></textarea>
                 </label>
-
                 <input type="hidden" name="_captcha" value="false">
-
                 <button type="submit">
                     Enviar
                 </button>
             </form>
-
         </section>
-
     </main>
-
     <footer>
         <a href="#">⬆ Vai subir? ⬆</a>
     </footer>
-
-
-
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="configScroll.js"></script>
     <script src="changeDescription.js"></script>
